Adding entity extractors to http interfaces.
