# python_wrapper/feersum_nlu/models/__init__.py
@@ -28,11 +28,14 @@ from __future__ import absolute_import
 from .create_details import CreateDetails
 from .date import Date
 from .date_list import DateList
+from .entity import Entity
+from .entity_list import EntityList
 from .instance_detail import InstanceDetail
 from .instance_detail_list import InstanceDetailList
 from .labeled_word_manifold import LabeledWordManifold
 from .labelled_text_sample import LabelledTextSample
 from .labelled_text_sample_list import LabelledTextSampleList
+from .regex_ent_create_details import RegexEntCreateDetails
 from .scored_label import ScoredLabel
 from .scored_label_list import ScoredLabelList
 from .sentiment import Sentiment
